css/main.css
@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');

body{
    font-family:'Nunito',sans-serif;
    background-color: rgb(49, 49, 49);
}

.wrapper{
    height: 100vh;
    justify-content: center;
    display: flex;
    align-items: center;
}

.row{
    display: flex;
}

.main{
    width: 80%;
    margin: 0 auto;
    height: 90vh;
}

.image_container{
    background-image: url(../css/images/bg.jpg);
    filter: grayscale(100%);
    height: 90vh;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    color: #000;
    border-radius:10px 0 0 10px;
    box-shadow: .8rem .5rem .5rem black;

}

.form_container{
    background-color: #1b2530;
    height: 90vh;
    padding-top: 100px;
    padding-left: 50px;
    text-align: center;
    border-radius: 0 10px 10px 0;
    box-shadow: .6rem .5rem .5rem black;
}



.location{
    text-align: center;
    width: auto;
    margin: 0 auto 2rem 0;
}

.image_p{
    font-size: 24px;
    color: #fff;
}

h1{
    color: #fff;
}

p{
    font-size: 20px;
    color: #fff;
    display: flex;
    justify-content: space-evenly;
}

input[type="text"] {
    background-color: transparent;
    border: 0;
    border-bottom: solid 1px #fff;
    width: 25%;
    padding-bottom: 4px;
    color: #fff !important;
    font-weight: lighter;
    letter-spacing: 2px;
    margin-bottom: 30px;
    margin-right: 20px;
    font-size: 20px;
}

  .btn{
    border: 0;
    padding: 8px 20px;
    margin: 0 2px;
    border-radius: 2px;
    font-weight: lighter;
    letter-spacing: 1px;
    font-size: 15px;
    cursor: pointer;
    background-color: grey;
    color: #fff;
    font-weight: 100;
  }

  .btn:hover{
      filter: brightness(80%); 
      color: #fff;
      cursor: pointer;
  }

  .info{
    margin: 2rem auto 0;
    width: 60%;
    display: none;
  }
  .values{
      display: flex;
      border-bottom: 1px solid #fff ;
      filter: brightness(50%);
      padding-bottom: 10px;
  }

  #showTable{
      display: block;
  }

